--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,14 +19,19 @@
     <string name="prompt_email">Email:</string>
     <string name="prompt_pw">PASSWORD:</string>
     <string name="prompt_password">Password:</string>
+    <string name="prompt_new_password">New Password:</string>
     <string name="prompt_cm_pw">Confirm Password:</string>
     <string name="tv_message">Welcome Baseball NSW!\nAs you are not yet connected to any groups, we need to get you started with your first group.</string>
     <string name="rotate">Rotate for Full Ladder </string>
     <string name="team">TEAM </string>
     <string name="score">PTS </string>
 
+
+
     <string name="f_name">First Name:</string>
     <string name="l_name">Last Name:</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
 
     <string name="rMale">Male</string>
     <string name="rFemale">Female</string>
